# defimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bsnes/: CMakeLists.txt
bsnes/gameboy/cartridge/: cartridge.hpp  serialization.cpp
bsnes/gameboy/cartridge/huc3/: huc3.cpp
bsnes/gameboy/cartridge/mbc0/: mbc0.cpp
bsnes/gameboy/cartridge/mbc1/: mbc1.cpp
bsnes/gameboy/cartridge/mbc2/: mbc2.cpp
bsnes/gameboy/cartridge/mbc3/: mbc3.hpp
bsnes/gameboy/cartridge/mbc5/: mbc5.cpp  mbc5.hpp
bsnes/gameboy/cpu/: cpu.cpp  cpu.hpp  serialization.cpp
bsnes/gameboy/cpu/core/: core.hpp
bsnes/gameboy/cpu/mmio/: mmio.cpp
bsnes/gameboy/cpu/timing/: timing.cpp
bsnes/gameboy/interface/: interface.hpp
bsnes/gameboy/lcd/: lcd.hpp
bsnes/gameboy/lcd/mmio/: mmio.cpp
bsnes/gameboy/memory/: memory.cpp
bsnes/gameboy/scheduler/: scheduler.cpp  scheduler.hpp
bsnes/gameboy/system/: system.cpp  system.hpp
bsnes/launcher/: launcher.cpp
bsnes/libco/: amd64.c  fiber.c  ppc.c  sjlj.c  x86.c
bsnes/nall/: algorithm.hpp  array.hpp  bit.hpp  config.hpp  dictionary.hpp  file.hpp  lzss.hpp  moduloarray.hpp  random.hpp  serializer.hpp  sort.hpp  static.hpp  ups.hpp  utility.hpp
bsnes/nall/gameboy/: cartridge.hpp
bsnes/nall/snes/: cartridge.hpp  cpu.hpp  smp.hpp
bsnes/nall/string/: base.hpp  bsv.hpp  cast.hpp  compare.hpp  convert.hpp  core.hpp  math.hpp  replace.hpp  split.hpp  strpos.hpp  trim.hpp  utility.hpp  variadic.hpp  xml.hpp
bsnes/phoenix/gtk/: combobox.cpp  editbox.cpp  gtk.cpp  listbox.cpp  menu.cpp  progressbar.cpp  verticalslider.cpp  widget.cpp  window.cpp
bsnes/phoenix/windows/: combobox.cpp  editbox.cpp  horizontalslider.cpp  label.cpp  menu.cpp  messagewindow.cpp  progressbar.cpp  radiobox.cpp  textbox.cpp  verticalslider.cpp  viewport.cpp  widget.cpp  windows.cpp  windows.hpp
bsnes/ruby/: audio.hpp  ruby.cpp  ruby.hpp  ruby_audio.cpp  ruby_impl.cpp  video.hpp
bsnes/ruby/audio/: directsound.cpp
bsnes/ui/: config.hpp  interface.cpp  interface.hpp
bsnes/ui-gameboy/: interface.cpp
bsnes/ui/general/: file-browser.cpp
bsnes/ui/input/: input.cpp
defim/nall/: any.hpp  (+9 more)
defimulator/: CMakeLists.txt
defimulator/gameboy/: gameboy.hpp
defimulator/gameboy/cartridge/: cartridge.cpp
defimulator/gameboy/cartridge/huc1/: huc1.cpp
defimulator/gameboy/cartridge/mbc1/: mbc1.hpp
defimulator/gameboy/cartridge/mbc3/: mbc3.cpp
defimulator/gameboy/cartridge/mmm01/: mmm01.cpp
defimulator/gameboy/cpu/core/: core.cpp  registers.hpp
defimulator/gameboy/cpu/timing/: opcode.cpp
defimulator/gameboy/lcd/: serialization.cpp
defimulator/gameboy/system/: bootrom-dmg.cpp  bootrom-sgb.cpp
defimulator/libco/: ucontext.c
defimulator/nall/: array.hpp  base64.hpp  concept.hpp  crc32.hpp  directory.hpp  dl.hpp  foreach.hpp  priorityqueue.hpp  property.hpp  serial.hpp  string.hpp  varint.hpp  vector.hpp
defimulator/nall/string/: filename.hpp  strl.hpp
defimulator/phoenix/: phoenix.cpp  phoenix.hpp
defimulator/phoenix/gtk/: canvas.cpp  combobox.cpp  gtk.cpp  label.cpp  listbox.cpp
defimulator/phoenix/gtk3/: button.cpp  canvas.cpp  checkbox.cpp  combobox.cpp  editbox.cpp  font.cpp  gtk.hpp  hexeditor.cpp  horizontalslider.cpp  label.cpp  listbox.cpp  menu.cpp  messagewindow.cpp  progressbar.cpp  radiobox.cpp  textbox.cpp  verticalslider.cpp  viewport.cpp  widget.cpp  window.cpp
defimulator/phoenix/windows/: button.cpp  checkbox.cpp  combobox.cpp  font.cpp  listbox.cpp  menu.cpp  radiobox.cpp  windows.cpp
defimulator/ruby/: input.hpp  ruby.cpp  ruby.hpp  ruby_impl.cpp
defimulator/ruby/audio/: ao.cpp  pulseaudio.cpp  pulseaudiosimple.cpp  xaudio2.hpp
defimulator/ruby/input/: carbon.cpp  directinput.cpp  sdl.cpp  x.cpp  xlibkeys.hpp
defimulator/ruby/video/: glx.cpp  opengl.hpp  wgl.cpp
defimulator/snes/: profile-accuracy.hpp  profile-compatibility.hpp  profile-performance.hpp  profiles.hpp  snes.hpp
defimulator/snes/alt/cpu/: cpu.cpp  cpu.hpp  dma.cpp  memory.cpp  mmio.cpp  serialization.cpp  timing.cpp
defimulator/snes/alt/ppu-compatibility/: ppu.cpp  ppu.hpp  serialization.cpp
defimulator/snes/alt/ppu-performance/: ppu.cpp
defimulator/snes/audio/: audio.cpp  audio.hpp
defimulator/snes/cartridge/: cartridge.cpp  xml.cpp
defimulator/snes/cpu/mmio/: mmio.cpp
defimulator/snes/interface/: interface.hpp
defimulator/snes/memory/: memory.cpp
defimulator/snes/ppu/: ppu.cpp
defimulator/snes/ppu/screen/: screen.cpp  screen.hpp
defimulator/snes/video/: video.cpp  video.hpp
defimulator/ui/: base.hpp  cheat-editor.cpp  config.cpp  file-browser.cpp  input-settings.cpp  input.cpp  input.h  interface.cpp  main-window.cpp  main-window.h  main.cpp  settings.h  slot-loader.cpp  state-manager.cpp  utility.cpp  video-settings.cpp
defimulator/ui-gtkmm3/: advanced-settings.cpp  application.cpp  application.h  audio-settings.cpp  base.h  base.hpp  cartridge.cpp  cartridge.h  cheat-editor.cpp  cheat-editor.h  configuration.cpp  configuration.h  file-browser.cpp  file-browser.h  input.cpp  input.h  main-window.cpp  main-window.h  main.cpp  menubar.cpp  menubar.h  settings.h  slot-loader.cpp  state-manager.cpp  state-manager.h  utility.cpp  utility.h  video-settings.cpp  viewport.cpp  viewport.h
defimulator/ui-gtkmm3/debugger/: cpu-debugger.h  debugger.h  memory-editor.h  smp-debugger.cpp
defimulator/ui-gtkmm3/tests/: CMakeLists.txt  main.cpp
defimulator/ui/cartridge/: cartridge.cpp  cartridge.h
defimulator/ui/debugger/: breakpoint-editor.cpp  breakpoint-editor.h  console.cpp  console.h  cpu-debugger.cpp  cpu-debugger.h  debugger.cpp  memory-editor.cpp  memory-editor.h  smp-debugger.cpp  smp-debugger.h
defimulator/ui/general/: file-browser.cpp  file-browser.hpp  main-window.cpp  main-window.hpp  slot-loader.cpp  slot-loader.hpp
defimulator/ui/input/: hotkeys.cpp  input.cpp  input.hpp
defimulator/ui/settings/: advanced.cpp  advanced.hpp  audio.cpp  audio.hpp  input.cpp  input.hpp  settings.h  video.cpp  video.hpp
snesfilter/: CMakeLists.txt
snesfilter/2xsai/: 2xsai.cpp
snespurify/: CMakeLists.txt  cc-gtk.sh  snespurify  snespurify.cpp
(+39 files in other folders)
